# huffman

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  Huffman.cpp  Huffman.h
tests/: CMakeLists.txt  main_tests.cpp  student_tests.cpp
